--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   "license": "ISC",
   "homepage": "",
   "dependencies": {
-    "bootstrap": "^4.6.0",
+    "@reduxjs/toolkit": "^1.6.2",
+    "axios": "^0.23.0",
+    "bootstrap": "^5.1.1",
     "core-js": "^3.12.1",
     "debug": "^4.3.1",
     "fastify": "^3.15.1",
@@ -32,13 +34,21 @@
     "fastify-socket.io": "^2.0.0",
     "fastify-static": "^4.0.1",
     "http-errors": "^1.8.0",
+    "jose": "^3.20.2",
     "jquery": "^3.6.0",
     "lodash": "^4.17.21",
     "pino-pretty": "^4.8.0",
     "point-of-view": "^4.14.0",
     "popper.js": "^1.16.1",
     "pug": "^3.0.2",
-    "regenerator-runtime": "^0.13.7"
+    "react": "^17.0.2",
+    "react-bootstrap": "^2.0.0-rc.0",
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.5",
+    "react-router-dom": "^5.3.0",
+    "react-scripts": "^4.0.3",
+    "regenerator-runtime": "^0.13.7",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/cli": "^7.13.16",
@@ -57,6 +67,7 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "formik": "^2.2.9",
     "mini-css-extract-plugin": "^1.6.0",
     "node-sass": "^6.0.0",
     "nodemon": "^2.0.7",
