--- a/babel.config.json
+++ b/babel.config.json
@@ -2,5 +2,15 @@
   "presets": [
     "@babel/preset-env",
     "@babel/preset-react"
+  ],
+  "plugins": [
+    ["@babel/plugin-transform-runtime",
+      {
+        "regenerator": true
+      }
+    ],
+    ["@babel/plugin-transform-react-jsx", {
+      "runtime": "automatic"
+    }]
   ]
 }
