--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -9,6 +9,7 @@ extends:
   - airbnb
   - "plugin:functional/external-recommended"
   - "plugin:functional/recommended"
+  - "plugin:react/jsx-runtime"
 
 parser: babel-eslint
 
@@ -32,3 +33,4 @@ rules:
   functional/functional-parameters: 0
   functional/no-try-statement: 0
   functional/no-throw-statement: 0
+  jsx-a11y/label-has-associated-control: 0
