--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server/index.js",
   "type": "module",
   "engines": {
-    "node": "14.x"
+    "node": "16.x"
   },
   "scripts": {
     "test": "echo 'no tests for this project'",
@@ -21,9 +21,13 @@
   "license": "ISC",
   "homepage": "",
   "dependencies": {
+    "@babel/plugin-transform-react-jsx": "^7.14.9",
+    "@babel/runtime": "^7.15.4",
     "@reduxjs/toolkit": "^1.6.2",
+    "@rollbar/react": "^0.8.0",
     "axios": "^0.23.0",
     "bootstrap": "^5.1.1",
+    "classnames": "^2.3.1",
     "core-js": "^3.12.1",
     "debug": "^4.3.1",
     "fastify": "^3.15.1",
@@ -34,6 +38,9 @@
     "fastify-socket.io": "^2.0.0",
     "fastify-static": "^4.0.1",
     "http-errors": "^1.8.0",
+    "i18next": "^21.3.3",
+    "i18next-browser-languagedetector": "^6.1.2",
+    "i18next-http-backend": "^1.3.1",
     "jose": "^3.20.2",
     "jquery": "^3.6.0",
     "lodash": "^4.17.21",
@@ -42,12 +49,16 @@
     "popper.js": "^1.16.1",
     "pug": "^3.0.2",
     "react": "^17.0.2",
-    "react-bootstrap": "^2.0.0-rc.0",
+    "react-bootstrap": "^2.0.0",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.12.0",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
     "regenerator-runtime": "^0.13.7",
+    "rollbar": "^2.24.0",
+    "socket.io-client": "^4.3.2",
+    "use-socket.io-client": "^1.1.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
@@ -55,6 +66,7 @@
     "@babel/core": "^7.14.0",
     "@babel/node": "^7.13.13",
     "@babel/plugin-proposal-class-properties": "^7.13.0",
+    "@babel/plugin-transform-runtime": "^7.15.8",
     "@babel/preset-env": "^7.14.1",
     "@babel/preset-react": "^7.13.13",
     "babel-eslint": "^10.1.0",
