--- a/babel.config.json
+++ b/babel.config.json
@@ -1,16 +1,17 @@
 {
-  "presets": [
-    "@babel/preset-env",
-    "@babel/preset-react"
-  ],
+  "presets": ["@babel/preset-env", "@babel/preset-react"],
   "plugins": [
-    ["@babel/plugin-transform-runtime",
+    [
+      "@babel/plugin-transform-runtime",
       {
         "regenerator": true
       }
     ],
-    ["@babel/plugin-transform-react-jsx", {
-      "runtime": "automatic"
-    }]
+    [
+      "@babel/plugin-transform-react-jsx",
+      {
+        "runtime": "automatic"
+      }
+    ]
   ]
 }
