--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@hexlet/code",
   "version": "0.0.1",
   "description": "",
-  "main": "src/index.jsx",
+  "main": "src/init.js",
   "type": "module",
   "engines": {
     "node": "16.x"
@@ -15,7 +15,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:hexlet-components/projects-frontend-l4-server.git"
+    "url": "git@github.com:hexlet-components/projects-frontend-l4.git"
   },
   "author": "Kirill Mokevnin",
   "license": "ISC",
