--- a/babel.config.json
+++ b/babel.config.json
@@ -1,17 +1,12 @@
 {
-  "presets": ["@babel/preset-env", "@babel/preset-react"],
-  "plugins": [
+  "presets": [
     [
-      "@babel/plugin-transform-runtime",
-      {
-        "regenerator": true
-      }
-    ],
-    [
-      "@babel/plugin-transform-react-jsx",
+      "@babel/preset-react",
       {
         "runtime": "automatic"
       }
-    ]
-  ]
+    ],
+    "@babel/preset-env"
+  ],
+  "plugins": ["@babel/plugin-transform-runtime"]
 }
