--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@hexlet/code",
-  "version": "0.0.1",
+  "name": "slack-chat",
+  "version": "0.1.0",
   "description": "",
-  "main": "src/init.js",
+  "main": "server/index.js",
   "type": "module",
   "engines": {
     "node": "16.x"
@@ -15,22 +15,21 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:hexlet-components/projects-frontend-l4.git"
+    "url": "git@github.com:neandreev/slack-chat.git"
   },
-  "author": "Kirill Mokevnin",
+  "author": "Andreev Danila",
   "license": "ISC",
   "homepage": "",
   "dependencies": {
-    "@babel/plugin-transform-react-jsx": "^7.14.9",
-    "@babel/runtime": "^7.15.4",
+    "@babel/runtime": "^7.16.0",
     "@reduxjs/toolkit": "^1.6.2",
     "@rollbar/react": "^0.8.0",
     "axios": "^0.23.0",
     "bootstrap": "^5.1.1",
     "classnames": "^2.3.1",
-    "core-js": "^3.12.1",
     "debug": "^4.3.1",
     "fastify": "^3.15.1",
+    "fastify-compress": "^3.6.1",
     "fastify-formbody": "^5.0.0",
     "fastify-jwt": "^2.4.0",
     "fastify-secure-session": "^2.3.1",
@@ -42,7 +41,7 @@
     "i18next": "^21.3.3",
     "i18next-browser-languagedetector": "^6.1.2",
     "jquery": "^3.6.0",
-    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "mini-css-extract-plugin": "^2.4.3",
     "pino-pretty": "^7.1.0",
     "point-of-view": "^4.14.0",
@@ -65,14 +64,17 @@
     "@babel/core": "^7.14.0",
     "@babel/node": "^7.13.13",
     "@babel/plugin-proposal-class-properties": "^7.13.0",
+    "@babel/plugin-transform-react-jsx": "^7.16.0",
     "@babel/plugin-transform-runtime": "^7.15.8",
     "@babel/preset-env": "^7.14.1",
-    "@babel/preset-react": "^7.13.13",
+    "@babel/preset-react": "^7.16.0",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
+    "core-js": "^3.19.0",
     "css-loader": "^5.2.4",
     "eslint": "^7.26.0",
     "eslint-config-airbnb": "^18.2.1",
+    "eslint-import-resolver-webpack": "^0.13.2",
     "eslint-plugin-functional": "^3.2.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
@@ -80,11 +82,10 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "node-sass": "^6.0.0",
     "nodemon": "^2.0.7",
-    "postcss-loader": "^5.2.0",
-    "postcss-preset-env": "^6.7.0",
     "sass-loader": "^11.1.0",
     "style-loader": "^2.0.0",
     "webpack": "^5.60.0",
+    "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.3.1"
   }
