--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@hexlet/code",
   "version": "0.1.0",
   "description": "",
-  "main": "server/index.js",
+  "main": "src/index.jsx",
   "type": "module",
   "engines": {
     "node": "16.x"
@@ -27,6 +27,7 @@
     "axios": "^0.23.0",
     "bootstrap": "^5.1.1",
     "classnames": "^2.3.1",
+    "core-js": "^3.19.1",
     "debug": "^4.3.1",
     "fastify": "^3.15.1",
     "fastify-compress": "^3.6.1",
@@ -70,13 +71,13 @@
     "@babel/preset-react": "^7.16.0",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
-    "core-js": "^3.19.0",
     "css-loader": "^5.2.4",
     "eslint": "^7.26.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-import-resolver-webpack": "^0.13.2",
     "eslint-plugin-functional": "^3.2.1",
     "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest-dom": "^3.9.2",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
