--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@reduxjs/toolkit": "^1.6.2",
     "@rollbar/react": "^0.8.0",
     "axios": "^0.23.0",
-    "bootstrap": "^5.1.1",
+    "bootstrap": "4.6.0",
     "classnames": "^2.3.1",
     "core-js": "^3.19.1",
     "debug": "^4.3.1",
@@ -49,7 +49,7 @@
     "popper.js": "^1.16.1",
     "pug": "^3.0.2",
     "react": "^17.0.2",
-    "react-bootstrap": "^2.0.0",
+    "react-bootstrap": "1.6.4",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.12.0",
     "react-redux": "^7.2.5",
